Add Maven profiles for separate Allure reports - Search and Add to Cart tests